--- a/apps/m7s-website/src/guide/plugins/gb28181.md
+++ b/apps/m7s-website/src/guide/plugins/gb28181.md
@@ -22,7 +22,7 @@ gb28181:
   prefetchrecord: false
   udpcachesize:   0
   sipnetwork:     udp
-  sipip:          127.0.0.1
+  sipip:          
   sipport:        5060
   serial:         "34020000002000000001"
   realm:          "3402000000"
@@ -35,13 +35,13 @@ gb28181:
   heartbeatinterval: 60
   heartbeatretry:    3
   
-  mediaip:          127.0.0.1
+  mediaip:          
   mediaport:        58200
   mediaidletimeout: 30
   medianetwork:     udp
   
   removebaninterval: 600
-  logverbose:        false
+  loglevel:         info
   audioenable:       true
 ```
 
@@ -50,7 +50,7 @@ gb28181:
 
 * sip服务器的配置
 - `SipNetwork` string 传输协议，默认UDP，可选TCP
-- `SipIP`      string sip 服务器公网IP
+- `SipIP`      string sip 服务器公网IP 默认 自动适配设备网段
 - `SipPort`    uint16 sip 服务器端口，默认 5060
 - `Serial`     string sip 服务器 id, 默认 34020000002000000001
 - `Realm`      string sip 服务器域，默认 3402000000
@@ -64,12 +64,13 @@ gb28181:
 - `HeartbeatRetry`    int    心跳超时次数，默认 3
 
 * 媒体服务器配置
-- `MediaIP`          string 媒体服务器地址
+- `MediaIP`          string 媒体服务器地址 默认 自动适配设备网段
 - `MediaPort`        uint16 媒体服务器端口
 - `MediaNetwork`     string 媒体传输协议，默认UDP，可选TCP
 - `MediaIdleTimeout` uint16 推流超时时间，超过则断开链接，让设备重连
 
-- `LogVerbose`        bool
+- `AudioEnable`       bool 是否开启音频
+- `LogLevel`        string 日志级别，默认 info（trace，debug，info，warn，error，fatal, panic）
 - `RemoveBanInterval` int  定时移除注册失败的设备黑名单，单位秒，默认10分钟（600秒）
 - `UdpCacheSize`      int  表示UDP缓存大小，默认为0，不开启。仅当TCP关闭，切缓存大于0时才开启，会最多缓存最多N个包，并排序，修复乱序造成的无法播放问题，注意开启后，会有一定的性能损耗，并丢失部分包。
 
@@ -163,3 +164,13 @@ id|是 | 设备ID
 channel|是|通道编号
 startTime|否|开始时间（字符串，格式：2021-7-23T12:00:00）
 endTime|否|结束时间（字符串格式同上）
+
+### 移动位置订阅
+
+`/gb28181/api/position`
+
+参数名 | 必传 | 含义
+|----|---|---
+id|是 | 设备ID
+expires|是|订阅周期（秒）
+interval|是|订阅间隔（秒）
