--- a/apps/m7s-website/src/guide/v4.md
+++ b/apps/m7s-website/src/guide/v4.md
@@ -1,6 +1,5 @@
 # v4 发布日志
-
-## 升级内容
+## 从V3升级到V4主要变化
 - 对核心结构体进行泛型重构
 - RingBuffer中元素存放的是完整的一帧，以确保构建RTP包时可以准确添加marker
 - 去除GOP延迟追帧逻辑，改为跳帧同步最新关键帧技术
@@ -29,3 +28,7 @@
 - rtsp插件实现h265的拉流播放、实现aac、g711音频流处理
 - rtsp协议转发将不再重新解包和封包——透传
 - rtmp协议实现client端逻辑——可以从远程rtmp服务器推拉流
+
+## Changelog
+
+<!--@include: ../release.txt-->
